--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "firebase": "^10.11.0"
+    "mongoose": "^8.3.2"
   }
 }
